Fix padding and margin on Safari

--- a/src/styles/tufte.css
+++ b/src/styles/tufte.css
@@ -46,8 +46,10 @@ html {
 
 body {
     width: 87.5%;
+    margin: 0;
     margin-left: auto;
     margin-right: auto;
+    padding: 0;
     padding-left: 12.5%;
     font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
     background-color: #f9f9f9;
